Quick fix for too much centered text

--- a/app/design/frontend/Shop/hh/web/css/main.less
+++ b/app/design/frontend/Shop/hh/web/css/main.less
@@ -5944,7 +5944,7 @@ Limiter
   padding-left: 0;
 }
 
-.items {
+.main-pagination .items {
   text-align: center;
   font-family: @headlineFont;
 }
